crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__trait_assoc_body.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "trait Iterator[i] { type Item = Number }"
---
alder::syntax

  × associated types are declared without a value in traits
   ╭─[/project/src/main.ald:1:31]
 1 │ trait Iterator[i] { type Item = Number }
   · ┬                             ┬
   · │                             ╰── remove this definition
   · ╰── this trait declaration starts here
   ╰────
  help: provide the associated type value in each `impl`
