crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__trait_method.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "trait Show[a] { fn (value: a) String }"
---
alder::syntax

  × I was expecting a name for this trait method
   ╭─[/project/src/main.ald:1:20]
 1 │ trait Show[a] { fn (value: a) String }
   ·                 ┬  ┬
   ·                 │  ╰── expected a lower-case name
   ·                 ╰── this trait method starts here
   ╰────
