crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__trait_open.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "trait Show[a] fn"
---
alder::syntax

  × I was expecting `{` to start this trait body
   ╭─[/project/src/main.ald:1:15]
 1 │ trait Show[a] fn
   · ┬             ┬
   · │             ╰── expected `{` here
   · ╰── this trait declaration starts here
   ╰────
