crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__trait_params_open.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "trait Show {"
---
alder::syntax

  × I was expecting `[` after this trait name
   ╭─[/project/src/main.ald:1:12]
 1 │ trait Show {
   · ┬          ┬
   · │          ╰── expected `[` here
   · ╰── this trait declaration starts here
   ╰────
  help: trait parameters look like `[a]` or `[f, a]`
