crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__trait_semicolon.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "trait Iterator[i] { type Item; }"
---
alder::syntax

  × trait items are separated by line breaks, not semicolons
   ╭─[/project/src/main.ald:1:30]
 1 │ trait Iterator[i] { type Item; }
   · ┬                            ┬
   · │                            ╰── remove this semicolon
   · ╰── this trait declaration starts here
   ╰────
